--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ethereum-waffle": "^3.0.0",
     "ethers": "^5.6.8",
     "hardhat": "^2.9.6",
+    "hardhat-contract-sizer": "^2.5.1",
     "hardhat-deploy": "^0.11.10",
     "hardhat-gas-reporter": "^1.0.4",
     "prettier": "^2.3.2",
